<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_distance">

    <!-- §6.1 True Distance tab -->
    <fragment
        android:id="@+id/nav_distance"
        android:name="sabuj.m.truedistance.ui.distance.DistanceFragment"
        android:label="@string/true_distance"
        tools:layout="@layout/fragment_distance">

        <action
            android:id="@+id/action_distance_to_savedLocations"
            app:destination="@id/nav_savedLocations" />
        <action
            android:id="@+id/action_distance_to_history"
            app:destination="@id/nav_history" />
        <action
            android:id="@+id/action_distance_to_tracking"
            app:destination="@id/nav_tracking" />
        <action
            android:id="@+id/action_distance_to_mapPicker"
            app:destination="@id/nav_mapPicker" />
    </fragment>

    <fragment
        android:id="@+id/nav_savedLocations"
        android:name="sabuj.m.truedistance.ui.savedlocations.SavedLocationsFragment"
        android:label="@string/saved_locations"
        tools:layout="@layout/fragment_saved_locations">
        <action
            android:id="@+id/action_savedLocations_to_mapPicker"
            app:destination="@id/nav_mapPicker" />
    </fragment>

    <fragment
        android:id="@+id/nav_mapPicker"
        android:name="sabuj.m.truedistance.ui.mappicker.MapPickerFragment"
        android:label="@string/pick_on_map"
        tools:layout="@layout/fragment_map_picker" />

    <fragment
        android:id="@+id/nav_history"
        android:name="sabuj.m.truedistance.ui.history.HistoryFragment"
        android:label="@string/distance_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_tracking"
        android:name="sabuj.m.truedistance.ui.distance.TrackingFragment"
        android:label="@string/tracking"
        tools:layout="@layout/fragment_tracking" />

    <!-- §6.2 Speedometer tab -->
    <fragment
        android:id="@+id/nav_speedometer"
        android:name="sabuj.m.truedistance.ui.speedometer.SpeedometerFragment"
        android:label="@string/speedometer"
        tools:layout="@layout/fragment_speedometer" />

    <!-- §6.3 Settings tab -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="sabuj.m.truedistance.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
